# microRoots

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
assets/: README.md
configs/: inference_config.yaml  model_paths.yaml
docs/: github_browser_upload.md  installation.md  model_weights.md  sam3_setup.md  troubleshooting.md  usage.md
examples/input_images/: README.md
examples/measurement_results/: README.md
examples/output_masks/: README.md
legacy/original_user_scripts/: README.md  original_measurement_code.py  original_yolo_sam3_pipeline.py
scripts/: README.md  download_weights.py  run_measurement.py  run_segmentation.py
src/micro_roots/: __init__.py
src/micro_roots/detection/: yolo_cbam_detector.py
src/micro_roots/measurement/: trait_measurement.py
src/micro_roots/pipeline/: yolo_sam3_pipeline.py
src/micro_roots/segmentation/: sam3_segmenter.py
src/micro_roots/utils/: colors.py  io_utils.py
weights/: README.md
